<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_foreground"
    android:hapticFeedbackEnabled="false"
    android:orientation="vertical"
    android:paddingTop="80dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/patua_one"
        android:text="@string/digiq"
        android:textColor="@color/colorPrimary"
        android:textSize="60sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/qr_code_image"
        app:srcCompat="@mipmap/qr" />

    <Button
        android:id="@+id/btnScan"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/open_sans_semibold"
        android:stateListAnimator="@animator/button_animator"
        android:text="@string/scan"
        android:textColor="@color/white"
        android:textSize="36sp" />

</androidx.appcompat.widget.LinearLayoutCompat>